jump clicking issue

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -49,6 +49,7 @@
   align-items: center;
   gap: 32px;
   font-size: 16px;
+  z-index: 100;
 }
 
 .center {
